--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gatsby-plugin-sitemap": "^2.2.16",
     "gatsby-plugin-styled-components": "^3.1.14",
     "gatsby-plugin-twitter": "^2.1.9",
+    "gatsby-plugin-typography": "^2.3.18",
     "gatsby-remark-autolink-headers": "^2.1.13",
     "gatsby-remark-copy-linked-files": "^2.1.23",
     "gatsby-remark-images": "^3.1.25",
@@ -38,7 +39,10 @@
     "react-helmet": "^5.2.1",
     "react-share": "^3.0.1",
     "react-twitter-widgets": "^1.7.1",
+    "react-typography": "^0.16.19",
     "styled-components": "^4.4.1",
+    "typography": "^0.16.19",
+    "typography-theme-parnassus": "^0.16.19",
     "url-join": "^4.0.0"
   },
   "devDependencies": {
