--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "gatsby-plugin-react-helmet": "^3.1.10",
     "gatsby-plugin-sharp": "^2.2.27",
     "gatsby-plugin-sitemap": "^2.2.16",
-    "gatsby-plugin-styled-components": "^3.1.14",
+    "gatsby-plugin-styled-components": "^3.1.16",
     "gatsby-plugin-twitter": "^2.1.9",
     "gatsby-plugin-typography": "^2.3.18",
     "gatsby-remark-autolink-headers": "^2.1.13",
@@ -33,6 +33,7 @@
     "moment": "^2.24.0",
     "netlify-cms-app": "^2.9.7",
     "prismjs": "^1.16.0",
+    "prop-types": "^15.7.2",
     "react": "^16.10.1",
     "react-disqus-comments": "^1.4.0",
     "react-dom": "^16.10.1",
