--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "version": "1.1.0",
   "author": "Ruben Harutyunyan <vagr9k@gmail.com>",
   "dependencies": {
-    "babel-plugin-styled-components": "^1.10.6",
+    "@emotion/core": "^10.0.22",
+    "@emotion/styled": "^10.0.23",
+    "emotion-theming": "^10.0.19",
     "gatsby": "^2.15.28",
     "gatsby-image": "^2.2.23",
     "gatsby-plugin-catch-links": "^2.1.12",
+    "gatsby-plugin-emotion": "^4.1.18",
     "gatsby-plugin-feed": "^2.3.15",
     "gatsby-plugin-google-analytics": "^2.1.19",
     "gatsby-plugin-lodash": "^3.1.10",
@@ -18,7 +21,6 @@
     "gatsby-plugin-react-helmet": "^3.1.10",
     "gatsby-plugin-sharp": "^2.2.27",
     "gatsby-plugin-sitemap": "^2.2.16",
-    "gatsby-plugin-styled-components": "^3.1.16",
     "gatsby-plugin-twitter": "^2.1.9",
     "gatsby-plugin-typography": "^2.3.18",
     "gatsby-remark-autolink-headers": "^2.1.13",
@@ -41,7 +43,6 @@
     "react-share": "^3.0.1",
     "react-twitter-widgets": "^1.7.1",
     "react-typography": "^0.16.19",
-    "styled-components": "^4.4.1",
     "typography": "^0.16.19",
     "typography-theme-parnassus": "^0.16.19",
     "url-join": "^4.0.0"
@@ -69,6 +70,7 @@
   "license": "MIT",
   "main": "n/a",
   "scripts": {
+    "start": "npm run develop",
     "develop": "gatsby develop",
     "dev": "npm run develop",
     "serve": "gatsby serve",
