--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-share": "^3.0.1",
     "react-twitter-widgets": "^1.7.1",
     "react-typography": "^0.16.19",
+    "tinycolor2": "^1.4.1",
     "typography": "^0.16.19",
     "typography-theme-parnassus": "^0.16.19",
     "url-join": "^4.0.0"
