--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-dom": "^16.10.1",
     "react-helmet": "^5.2.1",
     "react-share": "^3.0.1",
+    "react-toggle": "^4.1.1",
     "react-twitter-widgets": "^1.7.1",
     "react-typography": "^0.16.19",
     "tinycolor2": "^1.4.1",
