--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "gatsby-plugin-react-helmet": "^3.1.10",
     "gatsby-plugin-sharp": "^2.2.27",
     "gatsby-plugin-sitemap": "^2.2.16",
-    "gatsby-plugin-twitter": "^2.1.9",
     "gatsby-plugin-typography": "^2.3.18",
     "gatsby-remark-autolink-headers": "^2.1.13",
     "gatsby-remark-copy-linked-files": "^2.1.23",
@@ -56,6 +55,7 @@
     "eslint-plugin-import": "^2.17.2",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.13.0",
+    "gatsby-plugin-force-trailing-slashes": "^1.0.4",
     "gh-pages": "^2.0.1",
     "prettier": "^1.17.0",
     "remark-cli": "^7.0.0",
