--- a/package.json
+++ b/package.json
@@ -7,18 +7,18 @@
     "@emotion/core": "^10.0.22",
     "@emotion/styled": "^10.0.23",
     "emotion-theming": "^10.0.19",
-    "gatsby": "^2.15.28",
+    "gatsby": "^2.18.17",
     "gatsby-image": "^2.2.23",
     "gatsby-plugin-catch-links": "^2.1.12",
     "gatsby-plugin-emotion": "^4.1.18",
     "gatsby-plugin-feed": "^2.3.15",
     "gatsby-plugin-google-analytics": "^2.1.19",
     "gatsby-plugin-lodash": "^3.1.10",
-    "gatsby-plugin-manifest": "^2.2.20",
+    "gatsby-plugin-manifest": "^2.2.34",
     "gatsby-plugin-netlify-cms": "^4.1.22",
     "gatsby-plugin-nprogress": "^2.1.9",
-    "gatsby-plugin-offline": "^3.0.11",
     "gatsby-plugin-react-helmet": "^3.1.10",
+    "gatsby-plugin-remove-serviceworker": "^1.0.0",
     "gatsby-plugin-sharp": "^2.2.27",
     "gatsby-plugin-sitemap": "^2.2.16",
     "gatsby-plugin-typography": "^2.3.18",
